--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
@@ -74,10 +74,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
@@ -92,10 +92,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
@@ -110,10 +110,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
@@ -128,10 +128,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
@@ -146,10 +146,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
@@ -164,10 +164,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
@@ -182,10 +182,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
@@ -200,10 +200,10 @@
             <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
             <div class="blog-icon">
               <div>
-                <img src="assets/Time Icon.png" alt="" /> <span>10h</span>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
               </div>
               <div>
-                <img src="assets/Chat Icon.png" alt="" />
+                <i class="fa-regular fa-message"></i>
                 <span>23</span>
               </div>
             </div>
