media query added

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     --------------------------->
     <main class="container">
       <section class="btn-section">
-        <a href="#"><button>Upcoming Match</button></a> <br />
-        <a href="#"><button>All Group</button></a><br />
+        <a href="#"><button>Upcoming Match</button></a> 
+        <a href="#"><button>All Group</button></a>
         <a href="#"><button>Blog</button></a>
       </section>
       <!-- transfer live blog section -->
@@ -65,6 +65,60 @@
             </div>
           </div>
         </div>
+        <!-- <div class="blog">
+          <div class="thumbnail">
+            <img src="assets/Blog Image.png" alt="" />
+          </div>
+          <div class="blog-info">
+            <button>Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="blog-icon">
+              <div>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
+              </div>
+              <div>
+                <i class="fa-regular fa-message"></i>
+                <span>23</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="blog">
+          <div class="thumbnail">
+            <img src="assets/Blog Image.png" alt="" />
+          </div>
+          <div class="blog-info">
+            <button>Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="blog-icon">
+              <div>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
+              </div>
+              <div>
+                <i class="fa-regular fa-message"></i>
+                <span>23</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="blog">
+          <div class="thumbnail">
+            <img src="assets/Blog Image.png" alt="" />
+          </div>
+          <div class="blog-info">
+            <button>Transfer</button>
+            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+            <div class="blog-icon">
+              <div>
+                <i class="fa-regular fa-clock"></i> <span>10h</span>
+              </div>
+              <div>
+                <i class="fa-regular fa-message"></i>
+                <span>23</span>
+              </div>
+            </div>
+          </div>
+        </div> -->
         <div class="blog">
           <div class="thumbnail">
             <img src="assets/Blog Image.png" alt="" />
@@ -155,61 +209,10 @@
             </div>
           </div>
         </div>
-        <div class="blog">
-          <div class="thumbnail">
-            <img src="assets/Blog Image.png" alt="" />
-          </div>
-          <div class="blog-info">
-            <button>Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="blog-icon">
-              <div>
-                <i class="fa-regular fa-clock"></i> <span>10h</span>
-              </div>
-              <div>
-                <i class="fa-regular fa-message"></i>
-                <span>23</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="blog">
-          <div class="thumbnail">
-            <img src="assets/Blog Image.png" alt="" />
-          </div>
-          <div class="blog-info">
-            <button>Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="blog-icon">
-              <div>
-                <i class="fa-regular fa-clock"></i> <span>10h</span>
-              </div>
-              <div>
-                <i class="fa-regular fa-message"></i>
-                <span>23</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="blog">
-          <div class="thumbnail">
-            <img src="assets/Blog Image.png" alt="" />
-          </div>
-          <div class="blog-info">
-            <button>Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="blog-icon">
-              <div>
-                <i class="fa-regular fa-clock"></i> <span>10h</span>
-              </div>
-              <div>
-                <i class="fa-regular fa-message"></i>
-                <span>23</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        
+        <button id="view-all-btn">View All</button>
       </section>
+      
     </main>
     <!-- main section ended -->
 
@@ -227,6 +230,11 @@
             <a href="">Privacy Plicy</a>
             <a href="">Privacy Settings</a>
             <a href="">Goal Live</a>
+        </div>
+        <div class="footer-icon">
+          <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-square"></i></a>
+          <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </footer>
   </body>
