--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     --------------------------->
     <main class="container">
       <section class="btn-section">
-        <a href="#"><button>Upcoming Match</button></a> 
+        <a href="index2.html"><button>Upcoming Match</button></a> 
         <a href="#"><button>All Group</button></a>
-        <a href="#"><button>Blog</button></a>
+        <a href="index.html"><button>Blog</button></a>
       </section>
       <!-- transfer live blog section -->
       <section class="blogs">
