--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     --------------------------->
     <main class="container">
       <section class="btn-section">
-        <a href="index2.html"><button>Upcoming Match</button></a> 
+        <a href="upcoming-match.html"><button>Upcoming Match</button></a> 
         <a href="#"><button>All Group</button></a>
         <a href="index.html"><button>Blog</button></a>
       </section>
@@ -65,60 +65,7 @@
             </div>
           </div>
         </div>
-        <!-- <div class="blog">
-          <div class="thumbnail">
-            <img src="assets/Blog Image.png" alt="" />
-          </div>
-          <div class="blog-info">
-            <button>Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="blog-icon">
-              <div>
-                <i class="fa-regular fa-clock"></i> <span>10h</span>
-              </div>
-              <div>
-                <i class="fa-regular fa-message"></i>
-                <span>23</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="blog">
-          <div class="thumbnail">
-            <img src="assets/Blog Image.png" alt="" />
-          </div>
-          <div class="blog-info">
-            <button>Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="blog-icon">
-              <div>
-                <i class="fa-regular fa-clock"></i> <span>10h</span>
-              </div>
-              <div>
-                <i class="fa-regular fa-message"></i>
-                <span>23</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="blog">
-          <div class="thumbnail">
-            <img src="assets/Blog Image.png" alt="" />
-          </div>
-          <div class="blog-info">
-            <button>Transfer</button>
-            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-            <div class="blog-icon">
-              <div>
-                <i class="fa-regular fa-clock"></i> <span>10h</span>
-              </div>
-              <div>
-                <i class="fa-regular fa-message"></i>
-                <span>23</span>
-              </div>
-            </div>
-          </div>
-        </div> -->
+        
         <div class="blog">
           <div class="thumbnail">
             <img src="assets/Blog Image.png" alt="" />
