--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -41,7 +41,7 @@
     --------------------------->
     <main class="container">
       <section class="btn-section">
-        <a href="index2.html"><button>Upcoming Match</button></a> 
+        <a href="upcoming-match.html"><button>Upcoming Match</button></a> 
         <a href="#"><button>All Group</button></a>
         <a href="index.html"><button>Blog</button></a>
       </section>
